# PROJETO-DP

./: .gitignore  README.md  pyproject.toml
app/: dashboard_v1.py
data/company_employee_registries/: README.md
data/company_mapping_profiles/: 1016.json  448.json  528.json  755.json  887.json  README.md
data/company_master/: README.md  companies_registry.json  company_config_issues.json  company_configs.json
data/company_rubric_catalogs/: README.md
data/golden/: README.md
data/templates/: README.md  planilha_padrao_folha_v1.xlsx
docs/: architecture.md  backlog_tecnico_motor_txt.csv  mapa_implantacao_motor_txt.md  matriz_fontes_para_processo.csv  ondas_implantacao_empresas.csv  playbook_vscode_codex_chatgpt.md  schema_config_empresa.md  schema_planilha_canonica.md  spec_layout_43.md  whitelist_outros_sugerida.csv
scripts/: generate_planilha_padrao_v1.py  import_resumo_mensal.py  ingest_planilha_padrao_v1.py  map_snapshot_por_empresa.py  report_event_mapping_missing.py  seed_company_configs_batch.py  seed_event_mappings_batch.py  serialize_txt_fixed_width.py  validate_pipeline_v1.py
src/config/: __init__.py  master_data.py  models.py
src/dashboard/: __init__.py  column_mapping_profiles.py  company_admin.py  company_employee_registry.py  company_rubric_catalog.py  config_resolver.py  errors.py  models.py  overrides.py  profile_normalizer.py  report_importer.py  service.py  storage.py  txt_audit.py
src/domain/: __init__.py  canonical.py
src/ingestion/: __init__.py  errors.py  input_layout.py  normalization.py  pipeline.py  (+4 more)
tests/: test_smoke.py
(+64 files in other folders)
