[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "motor-txt-dominio-folha"
version = "0.1.0"
description = "Motor deterministico para gerar TXT de importacao da folha no Dominio"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7,<3",
  "openpyxl>=3.1,<4",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["config*", "domain*", "ingestion*", "mapping*", "serialization*", "validation*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
